# timer_cui

./: .gitignore  CLAUDE.md  LICENSE  README.md  pyproject.toml
.claude/: settings.local.json
src/: glyphs.py  timer.py
